<package>
  <name>fetch_bringup</name>
  <version>0.8.1</version>
  <description>
    Bringup for fetch
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="erelson@fetchrobotics.com">Eric Relson</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>fetch_description</run_depend>
  <run_depend>fetch_drivers</run_depend>
  <run_depend>fetch_open_auto_dock</run_depend>
  <run_depend>fetch_teleop</run_depend>
  <run_depend>graft</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>robot_controllers_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend version_gte="0.0.4">sick_tim</run_depend>
</package>
