<?xml version="1.0"?>
<package format="2">
  <name>fetch_bringup</name>
  <version>0.8.5</version>
  <description>
    Bringup for fetch
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="erelson@fetchrobotics.com">Eric Relson</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>fetch_description</exec_depend>
  <exec_depend>fetch_drivers</exec_depend>
  <exec_depend>fetch_moveit_config</exec_depend>
  <exec_depend>fetch_navigation</exec_depend>
  <exec_depend>fetch_open_auto_dock</exec_depend>
  <exec_depend>fetch_teleop</exec_depend>
  <exec_depend>graft</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>ps3joy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend version_gte="0.0.4">sick_tim</exec_depend>

</package>
