<package>
  <name>freight_bringup</name>
  <version>0.8.0</version>
  <description>
    Bringup for freight
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="erelson@fetchrobotics.com">Eric Relson</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>fetch_description</run_depend>
  <run_depend>fetch_drivers</run_depend>
  <run_depend>fetch_open_auto_dock</run_depend>
  <run_depend>fetch_teleop</run_depend>
  <run_depend>graft</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>sick_tim</run_depend>
</package>
